Implement Twilio WhatsApp OTP authentication, remove Supabase dependencies

--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "build": "cd frontend && npm run build",
     "install:frontend": "cd frontend && npm install",
     "install:all": "npm run install:frontend"
+  },
+  "dependencies": {
+    "twilio": "^5.10.4"
   }
 }
